fix nav responsiveness and footer placement on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,7 @@ body {
 .game-area {
     display: flex;
     flex-direction: column;
-    min-height: 60vh;
+    min-height: 600px;
 }
 
 /* rules area*/
@@ -210,9 +210,7 @@ footer {
     left: 0;
     top: 0;
     width: 100%;
-    /* Full width */
     height: 100%;
-    /* Full height */
     overflow: auto;
     /* Enable scroll if needed */
     background-color: rgb(0, 0, 0);
@@ -273,6 +271,9 @@ footer {
     #navigation {
         font-size: 1rem;
     }
+    #navigation li{
+        padding: 0.2rem;
+    }
 
     .game-option {
         font-size: 2em;
@@ -284,11 +285,11 @@ footer {
 @media screen and (max-width: 768px) {
 
     .heading h1 {
-        font-size: 1.5rem;
+        font-size: 1rem;
     }
 
     #navigation {
-        font-size: 1rem;
+        font-size: 0.8rem;
     }
 
     .game-option {
